// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BucketSpanEstimator renders the button 1`] = `
<div
  className="bucket-span-estimator"
>
  <EuiToolTip
    content="Experimental feature for estimating bucket span."
    position="bottom"
  >
    <EuiButton
      color="primary"
      disabled={false}
      fill={true}
      iconSide="right"
      isLoading={false}
      onClick={[Function]}
      size="s"
      type="button"
    >
      Estimate bucket span
    </EuiButton>
  </EuiToolTip>
</div>
`;

exports[`BucketSpanEstimator renders the loading button 1`] = `
<div
  className="bucket-span-estimator"
>
  <EuiToolTip
    content="Experimental feature for estimating bucket span."
    position="bottom"
  >
    <EuiButton
      color="primary"
      disabled={true}
      fill={true}
      iconSide="right"
      isLoading={true}
      onClick={[Function]}
      size="s"
      type="button"
    >
      Estimating bucket span
    </EuiButton>
  </EuiToolTip>
</div>
`;
